--- a/src/Components/MyOffice/MyOffice.module.css
+++ b/src/Components/MyOffice/MyOffice.module.css
@@ -12,13 +12,13 @@ body{
   flex-direction: column;
 }
 
-.User-info{
+.Userinfo{
   display: flex;
   flex-direction: row;
   
 }
 
-.User-name{
+.UserName{
   display: flex;
   flex-direction: column;
   margin-left: 40px;
