--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,29 +1,84 @@
 .main{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
+    flex-direction: column;
+    margin-bottom: 30px;
+    height: fit-content;
 }
 
-.fetching{
-    width: 70px;
-    height: 70px;
-    border-radius: 100%;
-    border: 4px dashed red;
-    margin: 60vh auto;
-    animation-name: search-fetching;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: linear;
-}
-@keyframes search-fetching {
-    0%{
-        transform: rotate(0deg);
-    }
-    
-    100%{
-        transform: rotate(360deg) scale(1.4);
 
-    }
-}
+
+.fetching {
+
+        
+        margin: 0 auto;
+        transform: rotateZ(45deg);
+        perspective: 1200px;
+        border-radius: 50%;
+        width: 80px;
+        height: 80px;
+        color: rgb(148, 78, 228);
+      }
+        .fetching:before,
+        .fetching:after {
+          content: '';
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: inherit;
+          height: inherit;
+          border-radius: 50%;
+          transform: rotateX(70deg);
+          animation: 1s spin linear infinite;
+        }
+        .fetching:after {
+          color: #51ff00;
+          transform: rotateY(70deg);
+          animation-delay: .4s;
+        }
+
+      @keyframes rotate {
+        0% {
+          transform: translate(-50%, -50%) rotateZ(0deg);
+        }
+        100% {
+          transform: translate(-50%, -50%) rotateZ(360deg);
+        }
+      }
+
+      @keyframes rotateccw {
+        0% {
+          transform: translate(-50%, -50%) rotate(0deg);
+        }
+        100% {
+          transform: translate(-50%, -50%) rotate(-360deg);
+        }
+      }
+
+      @keyframes spin {
+        0%,
+        100% {
+          box-shadow: .2em 0px 0 0px currentcolor;
+        }
+        12% {
+          box-shadow: .2em .2em 0 0 currentcolor;
+        }
+        25% {
+          box-shadow: 0 .2em 0 0px currentcolor;
+        }
+        37% {
+          box-shadow: -.2em .2em 0 0 currentcolor;
+        }
+        50% {
+          box-shadow: -.2em 0 0 0 currentcolor;
+        }
+        62% {
+          box-shadow: -.2em -.2em 0 0 currentcolor;
+        }
+        75% {
+          box-shadow: 0px -.2em 0 0 currentcolor;
+        }
+        87% {
+          box-shadow: .2em -.2em 0 0 currentcolor;
+        }
+      }
