--- a/src/Components/Main/SingleProductPage/SingleProductPage.css
+++ b/src/Components/Main/SingleProductPage/SingleProductPage.css
@@ -1,41 +1,66 @@
 .singleProductWrapper{
     display: grid;
     margin-bottom: 30px;
-    width: 100%;
     height: fit-content;
     grid-template-areas: "head  head"
-                         "rate  id"
                          "foto  price"
-                         "desc  price";
-    grid-template-rows: 100px 50px 1fr 200px;
+                         "foto  desc";
+    grid-template-rows: 70px 1fr 200px;
     grid-template-columns: 1fr 1fr ;
+    background-color: white;
+    color: #191c20;
+    padding: 20px ;
 }
 
 .headSP{
     grid-area: head;
-    background-color: aqua;
+    font-size: 30px;
+    text-align: center;
+    border-bottom: 1px solid #000;
 }
-.rateSP{
-    grid-area: rate;
-    background-color: rgb(118, 156, 156);
-}
-.idSP{
-    grid-area: id;
-    background-color: rgb(12, 29, 29);
 
-}
-.fotoSP{
+.foroSP{
     grid-area: foto;
-    background-color: rgb(104, 126, 63)166, 255, 0);
+    scale: 0.7;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.fotoSP >img{
-    width: 200px;
+.fotoSP-img{
+    width: 300px;
 }
+.fotoSP-img:hover{
+    scale: 1.3;
+}
+
 .descSP{
     grid-area: desc;
-    background-color: rgb(255, 255, 255);
+    line-height: 30px;
+    letter-spacing: 1px;
+    text-align: justify;
 }
 .priceSP{
     grid-area: price;
-    background-color: rgb(70, 38, 214);
+    display: flex;
+    align-items: center;
+    font-size: 33px;
+    color: rgb(78, 35, 14);
+    
+}
+.priceSP>div>span{
+    font-size: 20px;
+}
+.priceSP>button{
+    margin-left: 30px;
+    width: fit-content;
+    height: 40px;
+    background-color: #191c20;
+    color: rgb(124, 221, 221);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 10px;
+
 }
