--- a/src/Components/Main/ListPage/Product/Product.css
+++ b/src/Components/Main/ListPage/Product/Product.css
@@ -1,11 +1,12 @@
 .item-content{
     width: 150px;
+    height: 260px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     border: 1px solid rgba(0, 0, 0, 0.308);
-    box-shadow: rgba(0, 0, 0, 0.342) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.342) 0 5px 15px;
     background-color: white;
     color: #282c34;
     padding: 10px ;
