--- a/src/Components/Main/SearchBar/SearchBar.css
+++ b/src/Components/Main/SearchBar/SearchBar.css
@@ -8,13 +8,12 @@
 .searchBar-input{
     width: 500px;
     border-radius: 20px;
-    border: none;
+    border: 1px solid black;
     padding: 7px;
 }
 .search-button{
-    background-color: #282c34;
+    background-color: snow;
     border: none;
-    color: aliceblue;
     margin: 3px 0 0 0;
     padding: 0;
 }
