--- a/src/Components/Main/SingleProductPage/SingleProductPage.css
+++ b/src/Components/Main/SingleProductPage/SingleProductPage.css
@@ -3,9 +3,8 @@
     margin-bottom: 30px;
     height: fit-content;
     grid-template-areas: "head  head"
-                         "foto  price"
-                         "foto  desc";
-    grid-template-rows: 70px 1fr 200px;
+                         "foto  price";
+    grid-template-rows: 70px 600px ;
     grid-template-columns: 1fr 1fr ;
     background-color: white;
     color: #191c20;
@@ -21,27 +20,39 @@
 
 .foroSP{
     grid-area: foto;
-    scale: 0.7;
+  
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .fotoSP-img{
-    width: 300px;
+    width: 320px;
+    height: 420px;
+
 }
 .fotoSP-img:hover{
     scale: 1.3;
 }
 
 .descSP{
-    grid-area: desc;
     line-height: 30px;
     letter-spacing: 1px;
     text-align: justify;
 }
-.priceSP{
+.price-wrapper{
+    height: 100%;
     grid-area: price;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.price-wrapper>div:nth-child(2){
+    height:40%;
+    display: flex;
+}
+.priceSP{
+    height: 100px;
     display: flex;
     align-items: center;
     font-size: 33px;
