--- a/src/Components/About_us/aboutUs.module.css
+++ b/src/Components/About_us/aboutUs.module.css
@@ -58,5 +58,10 @@
     display: flex;
     justify-content: flex-end;
     width: 100%;
-
+}
+.MoreInfo{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
