--- a/src/Components/Main/ListPage/ListPage.css
+++ b/src/Components/Main/ListPage/ListPage.css
@@ -6,3 +6,26 @@
     justify-content: center;
 
 }
+.btn-and-products{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+.list-btn{
+    width: fit-content;
+    height: 40px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.342) 0px 5px 15px;
+    cursor: pointer;
+    padding: 5px;
+    color: black;
+}
+.list-btn:hover{
+    background-color: blueviolet;
+    scale: 1.1;
+    color: white;
+}
