--- a/src/Components/About_us/aboutUs.module.css
+++ b/src/Components/About_us/aboutUs.module.css
@@ -65,3 +65,13 @@
     flex-direction: column;
     align-items: center;
 }
+.h2map{
+    margin-right: 15%;
+    text-shadow: -1px 1px 0 white,
+    1px 1px 0 white,
+    1px -1px 0 white,
+    -1px -1px 0 white;
+    position: relative;
+    top: 60px;
+    z-index: 2;
+}
