--- a/src/Components/About_us/aboutUsSocial/AboutUsSocial.module.css
+++ b/src/Components/About_us/aboutUsSocial/AboutUsSocial.module.css
@@ -20,8 +20,9 @@
     height: 30px;
     font-weight: bold;
     text-decoration: none;
-    color: black;
+    color: white;
     position: relative;
+    font-variant: small-caps;
     top: 1px;
 }
 .instagram {
@@ -47,15 +48,15 @@
     text-decoration: underline;
     position: relative;
     top: 0;
-    color: black;
+    color: white;
 }
 .h3 {
+    font-weight: bold;
     width: 100%;
     height: 20px;
-    margin: 0;
+    margin: 10px 0;
     padding: 5px 0;
    font-size: 18px;
-    font-weight: normal;
 }
 .h4{
     padding: 3px 0;
@@ -63,6 +64,8 @@
     width: 100%;
 }
 .div3 {
+    font-weight: bold;
+    color: white;
     text-align: center;
     width: calc(100% - 16px);
     padding: 10px 8px;
