--- a/src/Components/About_us/aboutUsSocial/Map.module.css
+++ b/src/Components/About_us/aboutUsSocial/Map.module.css
@@ -1,7 +1,7 @@
 .mapContainer {
     width: 100%;
     height: 50vh;
-    margin: 10px;
+    margin: 10px auto;
     z-index: 0;
-    margin: auto;
+    border: 1px solid black;
 }
