--- a/src/Components/Main/ListPage/Product/Product.css
+++ b/src/Components/Main/ListPage/Product/Product.css
@@ -1,6 +1,6 @@
 .item-content{
-    width: 150px;
-    height: 260px;
+    width: 100%;
+    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,12 +9,21 @@
     box-shadow: rgba(0, 0, 0, 0.342) 0 5px 15px;
     background-color: white;
     color: #282c34;
+
     padding: 10px ;
     border-radius: 10px;
- box-sizing: border-box;   
+ box-sizing: border-box;
+}
+hr{
+    border-top: 1px solid black;
+    margin: 3px 0;
 }
 .prodAndPrice{
-    height: 70px;
+
+
+    width: 100%;
+    overflow: hidden;
+    height: 80px;
 }
 .product-img{
     width: 100px;
@@ -29,13 +38,21 @@
     align-items: center;
 }
 .product-title{
+    width: 100%;
     font-size: 15px;
     height: 35px;
+    margin: 0 0 5px 0;
+}
+.product-title span{
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
 .item-content:hover{
-   scale: 1.1;
+   scale: 1.02;
 }
 .product-price{
-    
+    font-weight: bold;
 }
