--- a/src/Components/MyOffice/styles.module.css
+++ b/src/Components/MyOffice/styles.module.css
@@ -1,7 +1,7 @@
 .red{
   color: red;
   font-weight: 500;
-  font-size: xx-large;
+  font-size: 20px;
 }
 
 .submit{
@@ -18,6 +18,13 @@
 }
 
 .test {
-  color: green;
+  font-size: 24px;
   font-weight: 200;
+}
+.input{
+  margin: 3px 0;
+  height: 3rem;
+  width: 100%;
+  border: 2px solid black;
+  border-radius: 1rem;
 }
