--- a/src/Components/Main/Main.module.css
+++ b/src/Components/Main/Main.module.css
@@ -4,7 +4,12 @@
     margin-bottom: 30px;
     height: fit-content;
 }
+
+
+
 .fetching {
+
+        
         margin: 0 auto;
         transform: rotateZ(45deg);
         perspective: 1200px;
@@ -53,13 +58,13 @@
       @keyframes spin {
         0%,
         100% {
-          box-shadow: .2em 0 0 0 currentcolor;
+          box-shadow: .2em 0px 0 0px currentcolor;
         }
         12% {
           box-shadow: .2em .2em 0 0 currentcolor;
         }
         25% {
-          box-shadow: 0 .2em 0 0 currentcolor;
+          box-shadow: 0 .2em 0 0px currentcolor;
         }
         37% {
           box-shadow: -.2em .2em 0 0 currentcolor;
@@ -71,7 +76,7 @@
           box-shadow: -.2em -.2em 0 0 currentcolor;
         }
         75% {
-          box-shadow: 0 -.2em 0 0 currentcolor;
+          box-shadow: 0px -.2em 0 0 currentcolor;
         }
         87% {
           box-shadow: .2em -.2em 0 0 currentcolor;
