--- a/src/Components/Main/ListPage/Product/Product.css
+++ b/src/Components/Main/ListPage/Product/Product.css
@@ -34,7 +34,7 @@ a{
 }
 .product-title{
     font-size: 15px;
-    height: 35px;
+    height: 30px;
     overflow: hidden;
 }
 .item-content:hover{
@@ -43,4 +43,7 @@ a{
 .product-rate{
     width: 100%;
     float: left;
+}
+.product-price{
+    padding-top: 20px;
 }
