--- a/src/Components/Main/ListPage/ListPage.css
+++ b/src/Components/Main/ListPage/ListPage.css
@@ -29,3 +29,14 @@
     scale: 1.1;
     color: white;
 }
+.customBtn{
+    width: 100%;
+    height: 40px;
+    background-color: #191c20;
+    color: rgb(124, 221, 221);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 10px;
+}
