--- a/src/Components/Main/ListPage/Product/Product.css
+++ b/src/Components/Main/ListPage/Product/Product.css
@@ -1,4 +1,5 @@
 .item-content{
+    text-align: center;
     width: 150px;
     height: 100%;
     text-decoration: none;
@@ -12,8 +13,22 @@
     color: #282c34;
     padding: 10px ;
     border-radius: 10px;
- box-sizing: border-box;   
+ box-sizing: border-box;  
+ animation-duration: 0.5s;
+    animation-name: bye; 
 }
+@keyframes bye {
+    0%{
+           scale: 0.9;
+       }
+       50%{
+           scale: 0.8;
+   
+       }
+    100%{
+       scale: 1;
+   } 
+   }
 a{
     text-decoration: none;
 }
