--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -1,4 +1,5 @@
 .CartWrapper{
+    position: relative;
     margin-top: 50px;
     display: flex;
     flex-direction: row;
@@ -6,7 +7,28 @@
     gap: 20px;
     justify-content: center;
 }
-.customBtn-active{
-    
-  
+.totalPrice{
+    position: absolute;
+    left: 100%;
+    width: 120px;
+    outline: 1px solid black;
+    padding: 10px;
 }
+.emptyCart{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 16px;
+
+
+}
+.emptyCart>img{
+    width: 45%;
+}
+.emptyCart>h2{
+    font-size: 22px;
+    font-weight: 700;
+    padding-bottom: 30px;
+}
+
