--- a/src/Components/MyOffice/modal/Modal.css
+++ b/src/Components/MyOffice/modal/Modal.css
@@ -31,3 +31,26 @@
 .modal_content.active{
   transform: scale(1);
 }
+
+
+.google-button{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  width: 150px;
+  height: 35px;
+  background-color: black;
+  color: azure;
+}
+
+/* .password-control {
+
+  background: url("https://cdn-icons-png.flaticon.com/512/7615/7615155.png");
+	
+}
+.password-control.view {
+	
+  background-image: url("https://cdn-icons-png.flaticon.com/512/7615/7615155.png") ;
+} */
