--- a/src/Components/Main/ListPage/ListPage.css
+++ b/src/Components/Main/ListPage/ListPage.css
@@ -1,5 +1,4 @@
 .content-products{
-    width: 80%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
@@ -31,14 +30,15 @@
     scale: 1.1;
     color: white;
 }
-.customBtn{
-    width: 100%;
-    height: 40px;
-    background-color: #191c20;
-    color: rgb(124, 221, 221);
+.filter{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 10px;
+    width:100%;
+    justify-content: space-around;
+}
+.listOfProductsItem{
+    width: 60%;
+    flex-wrap: wrap;
+    gap: 25px;
+    display: flex;
+
 }
