--- a/src/Components/Main/SingleProductPage/SingleProductPage.css
+++ b/src/Components/Main/SingleProductPage/SingleProductPage.css
@@ -31,9 +31,7 @@
     height: 420px;
 
 }
-.fotoSP-img:hover{
-    scale: 1.3;
-}
+
 
 .descSP{
     line-height: 30px;
@@ -52,8 +50,11 @@
     display: flex;
 }
 .priceSP{
+    grid-area: price;
+    width: 200px;
     height: 100px;
     display: flex;
+    gap: 30px;
     align-items: center;
     font-size: 33px;
     color: rgb(78, 35, 14);
