--- a/src/Components/MyOffice/styles.module.css
+++ b/src/Components/MyOffice/styles.module.css
@@ -1,7 +1,7 @@
-.red{
+.error{
   color: red;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .submit{
@@ -20,6 +20,8 @@
 .test {
   font-size: 24px;
   font-weight: 200;
+  margin: 5;
+  margin-left: 5px;
 }
 .input{
   margin: 3px 0;
